--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -2,6 +2,8 @@
     display: flex;
     margin: 10px;
     padding: 10px;
+    font-size: large;
+    text-align: justify;
 }
 #1{
 justify-content: center;
