--- a/src/components/lists/lists.css
+++ b/src/components/lists/lists.css
@@ -1,12 +1,29 @@
-#btn{
+#btn {
     text-decoration: none;
     color: white;
-    
-}
-
-/* addstudents */
-#one{
+  }
+  
+  /* addstudents */
+  #one {
     text-align: start;
     margin: 10px;
     padding: 1rem;
-}
+  }
+  
+  .a {
+    display: flex;
+    width: 100%;
+  }
+  .b {
+    width: 40%;
+    margin: auto;
+    padding-left: 14rem;
+  }
+  .c {
+    width: 15%;
+  }
+  .pag {
+    /* border: 2px solid black; */
+    justify-content: center;
+    margin: 10px;
+  }
